cmake_minimum_required(VERSION 3.15)
project(labs_cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(lab3.18b lab3/lab3.18b.cpp)

add_executable(lab4.35a lab4/lab4.35a.cpp)
add_executable(lab4.35b lab4/lab4.35b.cpp)
add_executable(labB lab4/labB.cpp)

add_executable(lab5.18 lab5/lab5.18.cpp)

add_executable(main main.cpp)
